--- a/templates/chat/corruption.html
+++ b/templates/chat/corruption.html
@@ -1,5 +1,5 @@
 <div>
-    <h3><b>{{localize "CHAT.CorruptingInfluence"}} <span style="text-transform: capitalize;">({{strength}})</span></b></h3>
+    <h3><b>{{localize "CHAT.CorruptingInfluence"}} <span style="text-transform: capitalize;">({{localize strength}})</span></b></h3>
 </div>
 <span class="chat-card-button-area">
     <a class='chat-card-button corrupt-button' data-strength="{{strength}}">{{localize "CHAT.Resist"}}</a>
