some translation related improvments

--- a/templates/actors/creature/creature-main.html
+++ b/templates/actors/creature/creature-main.html
@@ -1,6 +1,6 @@
 <div class="creature-lists save-scroll">
   <div class="creature-overview-label">{{localize "Creature Overview"}}
-    <a class="stomp-icon combat-icon" title = "{{localize NAME.Stomp}}"><i class="fas fa-paw"></i></a>
+    <a class="stomp-icon combat-icon" title = "{{localize 'NAME.Stomp'}}"><i class="fas fa-paw"></i></a>
     <a class="dodge-icon combat-icon" title = "{{localize 'NAME.Dodge'}}"><i class="fas fa-reply"></i></a>
     <a class="improvised-icon combat-icon" title = "{{localize 'NAME.Improvised'}}"><i class="fas fa-question"></i></a>
   </div>
