small translation fixes

--- a/templates/chat/post-item.html
+++ b/templates/chat/post-item.html
@@ -24,6 +24,6 @@
     {{/if}}
 
     {{#if showQuantity}}
-        <b>Post Quantity: </b> <span class="postQuantity">{{postQuantity}}</span>
+        <b>Opublikuj w ilości: </b> <span class="postQuantity">{{postQuantity}}</span>
     {{/if}}
 </div>
