--- a/templates/dialog/spell-dialog.html
+++ b/templates/dialog/spell-dialog.html
@@ -1,7 +1,7 @@
 <form class="spell-test">
   {{> systems/wfrp4e/templates/dialog/dialog-constant.html}}
   <div class="form-group custom-select">
-    <label>{{localize  "DIALOG.CastSkill"}}</label>
+    <label>{{localize "DIALOG.CastSkill"}}</label>
     <select name="skillSelected">
       {{#select defaultSelection}}
       {{#each castSkills as |skill skillIndex|}}
@@ -14,13 +14,36 @@
   <div class="form-group">
     <label title="{{localize 'DIALOG.HitLocation'}}">{{localize "ROLL.HitLocation"}} 
       <input type="checkbox" name="hitLocation" data-dtype = "Boolean" {{checked hitLocation}}/>
-  </label>
-
-  <label title="{{localize 'DIALOG.MalignantInfTT'}}">{{localize "DIALOG.MalignantInf"}} 
-    <input type="checkbox" name="malignantInfluence" data-dtype = "Boolean" {{checked malignantInfluence}}/>
-  </label>
+    </label>
   </div>
 
+  <div class="form-group">
+    <label title="{{localize 'DIALOG.MalignantInfTT'}}">{{localize "DIALOG.MalignantInf"}} 
+      <input type="checkbox" name="malignantInfluence" data-dtype = "Boolean" {{checked malignantInfluence}}/>
+    </label>
+  </div>
+
+  {{#if unofficialGrimoire}}
+  <div class="form-group">
+    <label title="{{localize 'DIALOG.UseIngredientTooltip'}}">{{localize "DIALOG.UseIngredient"}}</label>
+    <select name="ingredientTypeSelected">
+      <option value="none">{{localize "IngredientNone"}}</option>
+      <option value="power">{{localize "IngredientPower"}}</option>
+      <option value="control">{{localize "IngredientControl"}}</option>
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label>{{localize "Overchannelling"}}</label>
+    <input type="text" title="{{localize 'DIALOG.OverchannellingTooltip'}}" name="overchannelling" value="0" />
+  </div>
+
+  <div class="form-group">
+    <label title="{{localize 'DIALOG.Quickcasting'}}">{{localize "DIALOG.Quickcasting"}} 
+      <input title="{{localize 'DIALOG.QuickcastingTooltip'}}" type="checkbox" name="quickcasting" data-dtype="Boolean" {{checked quickcasting}}/>
+    </label>
+  </div>
+  {{/if}}
   <div class="roll-dialog-tag">spell</div>
 </form>
 
